Remove guestbook related parameters.

--- a/app.yaml
+++ b/app.yaml
@@ -2,7 +2,6 @@ runtime: python27
 api_version: 1
 threadsafe: true
 
-# [START handlers]
 handlers:
 - url: /favicon\.ico
   static_files: favicon.ico
@@ -11,14 +10,16 @@ handlers:
 - url: /bootstrap
   static_dir: bootstrap
 
+- url: /rest/.*
+  script: guestbook.app
+
 - url: /.*
   script: guestbook.app
-# [END handlers]
 
-# [START libraries]
 libraries:
 - name: webapp2
   version: latest
 - name: jinja2
   version: latest
-# [END libraries]
+- name: ujson
+  version: latest
