--- a/app.yaml
+++ b/app.yaml
@@ -18,8 +18,8 @@ handlers:
 
 libraries:
 - name: webapp2
-  version: latest
+  version: 2.5.2
 - name: jinja2
-  version: latest
-- name: ujson
-  version: latest
+  version: 2.6
+- name: webob
+  version: 1.2.3
