--- a/app.yaml
+++ b/app.yaml
@@ -10,6 +10,9 @@ handlers:
 - url: /rest/.*
   script: rest.app
 
+- url: /admin/.*
+  script: admin.app
+
 libraries:
 - name: webapp2
   version: 2.5.2
