--- a/app.yaml
+++ b/app.yaml
@@ -6,10 +6,10 @@ handlers:
 - url: /favicon\.ico
   static_files: favicon.ico
   upload: favicon\.ico
-
+- url: /static
+  static_dir: static
 - url: /rest/.*
   script: rest.app
-
 - url: /admin/.*
   script: admin.app
 
